--- a/client/src/index.html
+++ b/client/src/index.html
@@ -19,6 +19,9 @@
       <button id="modal-btn">
         <i class="fa-solid fa-plus fa-2x"></i>
       </button>
+      <button id="tag-modal-btn">
+        <i class="fa-solid fas fa-cog fa-2x"></i>
+      </button>
     </header>
     <div class="container">
       <div id="idea-list" class="ideas"></div>
